--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "child_process": "^1.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
+    "firebase-admin": "^13.2.0",
     "fireploy": "file:",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.2.2",
@@ -66,6 +69,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "typedoc": "^0.27.9",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
