--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "firebase-admin": "^13.2.0",
     "fireploy": "file:",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^9.15.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
