--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.15.2",
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bull": "^11.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
@@ -32,6 +33,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
+    "bull": "^4.16.5",
     "child_process": "^1.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -40,6 +42,7 @@
     "fireploy": "file:",
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.1",
+    "ioredis": "^5.6.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
