--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.0",
     "@types/multer": "^1.4.12",
+    "adm-zip": "^0.5.16",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bull": "^4.16.5",
     "child_process": "^1.0.2",
